Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10645

When the smooth property is included in the PropertyChanges then Qt Creator will crash when adding a new state

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 3.0.0
    • Qt Creator 2.8.1, Qt Creator 3.0.0-beta
    • Quick Designer
    • None

    Description

      With the attached QML, then click on Design, then on State2 and then click on add state. It will crash with the following stack:

       	KernelBase.dll!76c4c41f()	Unknown
       	[Frames below may be incorrect and/or missing, no symbols loaded for KernelBase.dll]	
      >	msvcr110d.dll!_CxxThrowException(void * pExceptionObject, const _s__ThrowInfo * pThrowInfo) Line 152	C++
       	QmlDesignerd.dll!QmlDesigner::Internal::ModelPrivate::resetModelByRewriter(const QString & description) Line 819	C++
       	QmlDesignerd.dll!QmlDesigner::Internal::ModelPrivate::notifyNodeReparent(const QSharedPointer<QmlDesigner::Internal::InternalNode> & internalNodePointer, const QSharedPointer<QmlDesigner::Internal::InternalNodeAbstractProperty> & newPropertyParent, const QSharedPointer<QmlDesigner::Internal::InternalNode> & oldParent, const QByteArray & oldPropertyName, QFlags<enum QmlDesigner::AbstractView::PropertyChangeFlag> propertyChange) Line 1258	C++
       	QmlDesignerd.dll!QmlDesigner::Internal::ModelPrivate::reparentNode(const QSharedPointer<QmlDesigner::Internal::InternalNode> & newParentNode, const QByteArray & name, const QSharedPointer<QmlDesigner::Internal::InternalNode> & internalNodePointer, bool list) Line 1538	C++
       	QmlDesignerd.dll!QmlDesigner::NodeAbstractProperty::reparentHere(const QmlDesigner::ModelNode & modelNode, bool isNodeList) Line 95	C++
       	QmlDesignerd.dll!QmlDesigner::NodeAbstractProperty::reparentHere(const QmlDesigner::ModelNode & modelNode) Line 63	C++
       	QmlDesignerd.dll!QmlDesigner::QmlModelState::duplicate(const QString & name) Line 278	C++
       	QmlDesignerd.dll!QmlDesigner::StatesEditorView::duplicateCurrentState() Line 251	C++
       	QmlDesignerd.dll!QmlDesigner::StatesEditorView::createNewState() Line 187	C++
       	QmlDesignerd.dll!QmlDesigner::StatesEditorView::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 77	C++
       	Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3530	C++
       	Qt5Qmld.dll!QQmlVMEMetaObject::activate(QObject * object, int index, void * * args) Line 1331	C++
       	Qt5Qmld.dll!QQmlVMEMetaObject::metaCall(QMetaObject::Call c, int _id, void * * a) Line 923	C++
       	Qt5Cored.dll!QAbstractDynamicMetaObject::metaCall(QObject * __formal, QMetaObject::Call c, int _id, void * * a) Line 422	C++
       	Qt5Cored.dll!QMetaObject::metacall(QObject * object, QMetaObject::Call cl, int idx, void * * argv) Line 306	C++
       	Qt5Qmld.dll!CallMethod(QObject * object, int index, int returnType, int argCount, int * argTypes, QV8Engine * engine, QV4::CallData * callArgs) Line 1122	C++
       	Qt5Qmld.dll!CallPrecise(QObject * object, const QQmlPropertyData & data, QV8Engine * engine, QV4::CallData * callArgs) Line 1355	C++
       	Qt5Qmld.dll!QV4::QObjectMethod::callInternal(QV4::CallData * callData) Line 1819	C++
       	Qt5Qmld.dll!QV4::QObjectMethod::call(QV4::Managed * m, QV4::CallData * callData) Line 1763	C++
       	Qt5Qmld.dll!QV4::FunctionObject::call(QV4::CallData * callData) Line 130	C++
       	Qt5Qmld.dll!QV4::__qmljs_call_property(QV4::ExecutionContext * context, const QV4::Referenced<QV4::String> name, QV4::CallDataRef callData) Line 830	C++
       	15670df4()	Unknown
       	Qt5Qmld.dll!QV4::Function::code(QV4::ExecutionContext * ctx, const unsigned char * data) Line 106	C++
       	Qt5Qmld.dll!QV4::SimpleScriptFunction::call(QV4::Managed * that, QV4::CallData * callData) Line 580	C++
       	Qt5Qmld.dll!QV4::FunctionObject::call(QV4::CallData * callData) Line 130	C++
       	Qt5Qmld.dll!QQmlJavaScriptExpression::evaluate(QQmlContextData * context, const QV4::ValueRef function, QV4::CallData * callData, bool * isUndefined) Line 166	C++
       	Qt5Qmld.dll!QQmlBoundSignalExpression::evaluate(void * * a) Line 227	C++
       	Qt5Qmld.dll!QQmlBoundSignal_callback(QQmlNotifierEndpoint * e, void * * a) Line 354	C++
       	Qt5Qmld.dll!QQmlNotifier::emitNotify(QQmlNotifierEndpoint * endpoint, void * * a) Line 81	C++
       	Qt5Qmld.dll!QQmlData::signalEmitted(QAbstractDeclarativeData * __formal, QObject * object, int index, void * * a) Line 703	C++
       	Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3423	C++
       	Qt5Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3405	C++
       	Qt5Quickd.dll!QQuickMouseArea::clicked(QQuickMouseEvent * _t1) Line 528	C++
       	Qt5Quickd.dll!QQuickMouseArea::setPressed(Qt::MouseButton button, bool p) Line 1108	C++
       	Qt5Quickd.dll!QQuickMouseArea::mouseReleaseEvent(QMouseEvent * event) Line 723	C++
       	Qt5Quickd.dll!QQuickItemPrivate::deliverMouseEvent(QMouseEvent * e) Line 4498	C++
       	Qt5Quickd.dll!QQuickWindow::sendEvent(QQuickItem * item, QEvent * e) Line 2220	C++
       	Qt5Quickd.dll!QQuickWindowPrivate::deliverMouseEvent(QMouseEvent * event) Line 1357	C++
       	Qt5Quickd.dll!QQuickWindow::mouseReleaseEvent(QMouseEvent * event) Line 1390	C++
       	Qt5Quickd.dll!QQuickView::mouseReleaseEvent(QMouseEvent * e) Line 614	C++
       	Qt5Guid.dll!QWindow::event(QEvent * ev) Line 1851	C++
       	Qt5Quickd.dll!QQuickWindow::event(QEvent * e) Line 1258	C++
       	Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3470	C++
       	Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 2891	C++
       	Qt5Cored.dll!QCoreApplication::notifyInternal(QObject * receiver, QEvent * event) Line 878	C++
       	Qt5Cored.dll!QCoreApplication::sendSpontaneousEvent(QObject * receiver, QEvent * event) Line 235	C++
       	Qt5Guid.dll!QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent * e) Line 1585	C++
       	Qt5Guid.dll!QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent * e) Line 1398	C++
       	Qt5Guid.dll!QWindowSystemInterface::sendWindowSystemEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 572	C++
       	qwindowsd.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 89	C++
       	Qt5Cored.dll!qt_internal_proc(HWND__ * hwnd, unsigned int message, unsigned int wp, long lp) Line 423	C++
       	user32.dll!753e62fa()	Unknown
       	user32.dll!753e6d3a()	Unknown
       	user32.dll!753e6ce9()	Unknown
       	user32.dll!753e77c4()	Unknown
       	user32.dll!753e788a()	Unknown
       	Qt5Cored.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 757	C++
       	qwindowsd.dll!QWindowsGuiEventDispatcher::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 80	C++
       	Qt5Cored.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 137	C++
       	Qt5Cored.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 212	C++
       	Qt5Cored.dll!QCoreApplication::exec() Line 1131	C++
       	Qt5Guid.dll!QGuiApplication::exec() Line 1333	C++
       	Qt5Widgetsd.dll!QApplication::exec() Line 2696	C++
       	qtcreator.exe!main(int argc, char * * argv) Line 531	C++
       	qtcreator.exe!__tmainCRTStartup() Line 536	C
       	qtcreator.exe!mainCRTStartup() Line 377	C
       	kernel32.dll!76e5336a()	Unknown
       	ntdll.dll!779e9f72()	Unknown
       	ntdll.dll!779e9f45()	Unknown
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thohartm Thomas Hartmann
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes