QmlDesigner.Rewriter: crash fix

PropertyChanges were not parsed correctly.
Everything was a string literal.

Task-number: QTCREATORBUG-10645
Change-Id: Iba40ef37ff3b8bdc7b8b1673ecb8edbc1afb16a1
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>